style(repo): standardize names of GH jobs (#584)
Adjustments to job names to make them easier to find in the history.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/approve-bot-pr.yml
+++ b/.github/workflows/approve-bot-pr.yml
@@ -32,6 +32,8 @@ permissions:
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
+    name: approve-bot
+
     permissions:
       pull-requests: write
 
