--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -35,6 +35,8 @@ permissions:
 jobs:
   greeting:
     runs-on: ubuntu-latest
+    name: greetings
+
     permissions:
       issues: write
       pull-requests: write
