--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -33,7 +33,8 @@ permissions:
 
 jobs:
   spelling:
-    name: Check Spelling
+    name: spelling
+
     permissions:
       pull-requests: read
       actions: read
