--- a/.github/workflows/trivy-scanfs.yml
+++ b/.github/workflows/trivy-scanfs.yml
@@ -21,7 +21,7 @@
 # More info at https://github.com/openwall/john-packages
 
 ---
-name: Trivy Scan fs
+name: Trivy fs
 "on":
   pull_request:
   push:
@@ -33,7 +33,8 @@ permissions:
 jobs:
   trivy-code-security-scan:
     runs-on: ubuntu-latest
-    name: Scan fs
+    name: scan-fs
+
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
