--- a/.github/workflows/approve-pr.yml
+++ b/.github/workflows/approve-pr.yml
@@ -36,6 +36,8 @@ permissions:
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
+    name: approve-pr
+
     permissions:
       pull-requests: write
 
