--- a/.github/workflows/cflite_fuzz.yml
+++ b/.github/workflows/cflite_fuzz.yml
@@ -21,7 +21,7 @@
 # More info at https://github.com/openwall/john-packages
 
 ---
-name: ClusterFuzzLite fuzzing
+name: FuzzLite fuzzing
 "on":
   schedule:
     - cron: "0 4 * * MON"
@@ -32,8 +32,10 @@ permissions:
   contents: read
 
 jobs:
-  PR:
+  test:
     runs-on: ubuntu-latest
+    name: fuzzing
+
     concurrency:
       group: ${{ github.workflow }}-${{ matrix.sanitizer }}-${{ github.ref }}
       cancel-in-progress: true
