--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -2,7 +2,7 @@
 # by a third-party and are governed by separate terms of service, privacy
 # policy, and support documentation.
 ---
-name: Scorecard supply-chain security
+name: Supply chain
 "on":
   # For Branch-Protection check. Only the default branch is supported. See
   # https://github.com/ossf/scorecard/blob/main/docs/checks.md#branch-protection
@@ -19,8 +19,9 @@ permissions:
 
 jobs:
   analysis:
-    name: Scorecard analysis
     runs-on: ubuntu-latest
+    name: scorecard
+
     permissions:
       # Needed to upload the results to code-scanning dashboard.
       security-events: write
