fix(ci): add a missing user to fuzzing image (#585)
The user that is used by the fuzzing Docker image needs to be properly
created in the operating system. A root user is required.

Fix: b0aae463f7dae99659fe98fcda96550f688a0267.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.clusterfuzzlite/Dockerfile
+++ b/.clusterfuzzlite/Dockerfile
@@ -27,6 +27,8 @@ RUN git clone --depth 1 https://github.com/openwall/john.git /upstream \
     && apt-get install -y --no-install-recommends \
         libbz2-dev=* libgmp-dev=* libpcap-dev=* \
         libssl-dev=* zlib1g-dev=* \
+    # libFuzzingEngine requires a root user
+    && useradd --uid 0 --non-unique --gid 0 -m tester \
 # ==================================================================
 # Clean up the image (shrink the Docker image)
 # ------------------------------------------------------------------
