chore(dependabot): scan destination folder (#586)
Scan the destination folder and not a symbolic link. It seems that
dependabot is unable to follow a symbolic link and is failing in the
update process.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -38,7 +38,7 @@ updates:
       day: "saturday"
 
   - package-ecosystem: devcontainers
-    directory: /
+    directory: /IDE
     schedule:
       interval: "weekly"
       day: "saturday"
