ci(automation.yml): make auto merge sturdier (#591)
It works the way it is now (grep returns 1 and GH action fails with
an error), but we can improve it.

Complements b45d1b519ffb4cd7583ef478bb15f2ed1a9f89cf.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -58,12 +58,15 @@ jobs:
         run: |
           gh pr checkout "$PR_URL"
 
-          APPROVALS="$(gh pr status --json latestReviews --jq '.currentBranch.latestReviews[].state == "APPROVED"' | grep -c 'true')"
+          DATA="$(gh pr status --json latestReviews --jq '.currentBranch.latestReviews[].state == "APPROVED"')"
+          APPROVALS="$(echo "$DATA" | grep -c 'true' || true)"
           echo "Approvals: $APPROVALS"
 
           if [[ "$APPROVALS" -ge 2 ]]; then
-            echo "Auto-merge Dependabot PRs.";
+            echo "Auto-merge Dependabot PRs."
             gh pr merge --auto --squash "$PR_URL"
+          else
+            echo "Nothing to do."
           fi
 
         env:
