security(approve-pr.yml): limit users allowed (#597)
Restrict the list of users who can approve a PR using the GitHub
workflow.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/approve-pr.yml
+++ b/.github/workflows/approve-pr.yml
@@ -41,6 +41,7 @@ jobs:
     permissions:
       pull-requests: write
 
+    if: github.actor == 'claudioandre-br' || github.actor == 'solardiz'
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
