--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -21,7 +21,7 @@
 # More info at https://github.com/openwall/john-packages
 
 ---
-name: Auto merge
+name: Merge bot
 
 "on":
   pull_request_target:
