--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -38,7 +38,7 @@ permissions:
 
 jobs:
   dependency-review:
-    if: ${{ github.repository == 'openwall/john-packages' }}
+    # if: ${{ github.event.pull_request.head.repo.full_name == 'openwall/john-packages' }}
     runs-on: ubuntu-latest
     name: dependency-review
 
@@ -54,7 +54,13 @@ jobs:
             api.securityscorecards.dev:443
             github.com:443
 
-      - name: "Checkout Repository"
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: "Dependency Review"
-        uses: actions/dependency-review-action@4081bf99e2866ebe428fc0477b69eb4fcda7220a # v4.4.0
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: |
+            echo ${{ github.event.pull_request.head.repo.full_name }}
+
+      # - name: "Checkout Repository"
+      #   uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      # - name: "Dependency Review"
+      #   uses: actions/dependency-review-action@4081bf99e2866ebe428fc0477b69eb4fcda7220a # v4.4.0
