--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -38,10 +38,10 @@ permissions:
 
 jobs:
   dependency-review:
-    if: ${{ github.repository == 'openwall/john-packages' }}
     runs-on: ubuntu-latest
     name: dependency-review
 
+    if: github.repository == 'openwall/john-packages'
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
