ci(dependabot.yml): add updates in groups (#601)
Correction to make the process more straightforward, start grouping PRs.

By default, Dependabot raises a single pull request for each dependency
that needs to be updated. We are going to use groups, so that Dependabot
opens a single pull request to update multiple dependencies at the same
time.

Fix: 032160df491ae7aee9a0110d32026c8be5091555.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,7 +14,7 @@ updates:
       day: "saturday"
 
   # ********** Docker **********
-  # Ubuntu
+  # Base OSes
   - package-ecosystem: docker
     directories:
       - /CI/Dockerfiles
@@ -25,14 +25,7 @@ updates:
     groups:
       ubuntu:
         patterns:
-          - "ubuntu*"
-
-  # If it's not Ubuntu
-  - package-ecosystem: docker
-    directory: /CI/Dockerfiles
-    schedule:
-      interval: "weekly"
-      day: "saturday"
+          - "*"
 
   # nvidia/cuda
   - package-ecosystem: docker
