--- a/.github/workflows/merge-pr.yml
+++ b/.github/workflows/merge-pr.yml
@@ -17,40 +17,40 @@
 # the Free Software Foundation, as expressed in version 2, seen at
 # http://www.gnu.org/licenses/gpl-2.0.html
 ###############################################################################
-# GitHub action to merge the PR whose number is requested
+# GitHub Action that performs the actual merge
 # More info at https://github.com/openwall/john-packages
 
 ---
-name: Merge it
+name: MergePR
 
-"on":
-  workflow_dispatch:
+on:
+  workflow_call:
     inputs:
-      pullRequestNumber:
-        description: Pull request number
+      branch:
+        description: "The name of the branch to be merged."
         required: true
-      trial:
-        description: Run in trial mode
-        type: boolean
-        default: false
-
-permissions:
-  contents: read
+        type: string
+      owner:
+        description: "The owner of the repository the PR comes from"
+        required: true
+        type: string
+      repo:
+        description: "The name of the repository the PR comes from"
+        required: true
+        type: string
+      pr-url:
+        description: "The number of the PR to merge"
+        required: true
+        type: string
+      request:
+        description: "The command to be executed"
+        required: false
+        type: string
+        default: "bot: MERGE"
 
 jobs:
-  pr-data:
+  merger:
     runs-on: ubuntu-latest
-    name: merge-it-data
-
-    permissions:
-      contents: write
-      pull-requests: write
-
-    outputs:
-      branch: ${{ steps.context.outputs.branch }}
-      owner: ${{ steps.context.outputs.owner }}
-      repo: ${{ steps.context.outputs.repo }}
-      request: ${{ steps.context.outputs.request }}
 
     if: github.actor == 'claudioandre-br' || github.actor == 'solardiz'
     steps:
@@ -65,39 +65,24 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
+          ref: main
 
-      - name: Get PR info
-        id: context
+      - name: GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
+      - name: Auto-merge PRs
         run: |
-          gh pr checkout "$PR_URL"
+          export BRANCH="${{ inputs.branch }}"
+          export OWNER="${{ inputs.owner }}"
+          export REPO="${{ inputs.repo }}"
+          export PR_URL="${{ inputs.pr-url }}"
+          export REQUEST="${{ inputs.request }}"
 
-          BRANCH="$(gh pr view --json headRefName        --jq '.headRefName')"
-          OWNER="$(gh pr view --json headRepositoryOwner --jq '.headRepositoryOwner.login')"
-          REPO="$(gh pr view --json headRepository       --jq '.headRepository.name')"
-
-          if [[ ${{ github.event.inputs.trial }}  == "true" ]]; then
-            REQUEST="bot: MERGE trial"
-          else
-            REQUEST="bot: MERGE"
-          fi
-          {
-            echo "branch=$BRANCH"
-            echo "owner=$OWNER"
-            echo "repo=$REPO"
-            echo "request=$REQUEST"
-          } >> "$GITHUB_OUTPUT"
+          source "./scripts/merge_procedures.sh" # @main
 
         env:
           GH_TOKEN: ${{ github.token }}
-          PR_URL: ${{ github.event.inputs.pullRequestNumber }}
-
-  call-merge-pr:
-    needs: [pr-data]
-    name: merge-it-run
-    uses: openwall/john-packages/.github/workflows/merge-pr.yml@main
-    with:
-      branch: ${{ needs.pr-data.outputs.branch }}
-      owner: ${{ needs.pr-data.outputs.owner }}
-      repo: ${{ needs.pr-data.outputs.repo }}
-      pr-url: ${{ github.event.inputs.pullRequestNumber }}
-      request: "${{ needs.pr-data.outputs.request }}"
