feat(merge-bot): call the bot via PR comment (#625)
Allow the merge bot to be called via a comment in a PR.

In the cloud, things are eventually consistent, so after a change to
a PR, the user must wait a few seconds before calling the merge bot,
otherwise the PR status will be unstable or unknown.

For this reason, calling the merge bot via comments on a PR review
is a bad idea. In this situation, the PR itself is being changed.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/merge-bot.yml
+++ b/.github/workflows/merge-bot.yml
@@ -17,7 +17,7 @@
 # the Free Software Foundation, as expressed in version 2, seen at
 # http://www.gnu.org/licenses/gpl-2.0.html
 ###############################################################################
-# GitHub Action to react to PR reviews and merge PRs on request
+# GitHub Action to react to PR reviews/comments and merge PRs on request
 # More info at https://github.com/openwall/john-packages
 
 ---
@@ -27,6 +27,9 @@ name: Merge bot
   pull_request_review:
     types:
       - submitted
+  issue_comment:
+    types:
+      - created
 
 permissions:
   contents: read
@@ -38,10 +41,16 @@ jobs:
       pull-requests: write
 
     name: merge-bot-run
+    if: >-
+      startsWith(github.event.review.body, 'bot: MERGE') ||
+      (
+        github.event.issue.pull_request != '' &&
+        startsWith(github.event.comment.body, 'bot: MERGE')
+      )
     uses: openwall/john-packages/.github/workflows/merge-pr.yml@main
     with:
       branch: ${{ github.event.pull_request.head.ref }}
       owner: ${{ github.event.pull_request.head.repo.owner.login }}
       repo: ${{ github.event.pull_request.head.repo.name }}
-      pr-url: ${{ github.event.pull_request.html_url }}
-      request: ${{ github.event.review.body }}
+      pr-number: ${{ github.event.pull_request.number || github.event.issue.number }}
+      request: ${{ github.event.review.body || github.event.comment.body }}
