--- a/.github/workflows/approve-it.yml
+++ b/.github/workflows/approve-it.yml
@@ -21,7 +21,7 @@
 # More info at https://github.com/openwall/john-packages
 
 ---
-name: Approve PR
+name: Approve it
 
 "on":
   workflow_dispatch:
