security(merge-bot): allow app update workflow (#629)
Allow the bot to update workflow files (this is necessary because we
will use it for dependabot updates, which impact workflows a lot).

Human intervention is required to start the bot.

Maybe that's why I was seeing strange errors. GitHub has (just now)
added an error message that didn't exist before.

Error message :
- refusing to allow a GitHub App to create or update workflow
  `.github/workflows/approve-it.yml` without `workflows` permission.

--- a/.github/workflows/merge-bot.yml
+++ b/.github/workflows/merge-bot.yml
@@ -39,6 +39,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      workflows: write
 
     name: merge-bot-run
     if: >-
