--- a/.github/workflows/merge-it.yml
+++ b/.github/workflows/merge-it.yml
@@ -43,6 +43,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      workflows: write
 
     name: merge-it-run
     uses: openwall/john-packages/.github/workflows/merge-pr.yml@main
