--- a/.github/workflows/merge-pr.yml
+++ b/.github/workflows/merge-pr.yml
@@ -57,6 +57,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      workflows: write
 
     if: github.actor == 'claudioandre-br' || github.actor == 'solardiz'
     steps:
