revert: chore(trivy): temporarily remove secrets check (#642)
This reverts commit 8e21a52fe0b5d8d30198416d913d317305396357.

Trivy's workflow was validating old code, so I needed to disable a check
that should now be enabled.

So I'm partially reverting #637.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/trivy-scanfs.yml
+++ b/.github/workflows/trivy-scanfs.yml
@@ -57,7 +57,7 @@ jobs:
         uses: aquasecurity/trivy-action@915b19bbe73b92a6cf82a1bc12b087c9a19a5fe2 # 0.28.0
         with:
           scan-type: "fs"
-          scanners: vuln,misconfig,license
+          scanners: vuln,secret,misconfig,license
           skip-files: cloud-tool/security-group.tf # See #577
           exit-code: 1
         env:
