ci(scorecard): change how action is executed (#643)
Ensure the job is only run in the project's original repository.

Use a new approach to control and filter when the action is executed:
1. only in the original repository;
2. only targeting the main branch.

Plus:
1. or in a scheduled execution;
2. or in a push for main.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -12,7 +12,6 @@ name: Supply chain
   schedule:
     - cron: "43 15 * * 2"
   push:
-    branches: [main]
 
 permissions:
   contents: read
@@ -31,6 +30,9 @@ jobs:
       # contents: read
       # actions: read
 
+    if:
+      github.repository == 'openwall/john-packages' && github.ref == 'refs/heads/main' &&
+      (github.event_name == 'push' || github.event_name == 'schedule')
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
