--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -17,15 +17,14 @@
 # the Free Software Foundation, as expressed in version 2, seen at
 # http://www.gnu.org/licenses/gpl-2.0.html
 ###############################################################################
-# GitHub Action to run Trivy code scan
+# GitHub Action to run Trivy SBOM
 # More info at https://github.com/openwall/john-packages
 
 ---
-name: Trivy rootfs
+name: Trivy
 
 "on":
   push:
-    branches: [main]
 
 permissions:
   contents: read
@@ -33,12 +32,15 @@ permissions:
 jobs:
   trivy-code-security-scan:
     runs-on: ubuntu-latest
-    name: scan-rootfs
+    name: scan-sbom
 
     permissions:
+      contents: write
       security-events: write
-      id-token: write
 
+    if:
+      github.repository == 'openwall/john-packages' && github.ref == 'refs/heads/main' &&
+      (github.event_name == 'push')
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
@@ -57,14 +59,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
+      - name: Run Trivy in GitHub SBOM mode and submit results to Dependency Graph
+        uses: aquasecurity/trivy-action@915b19bbe73b92a6cf82a1bc12b087c9a19a5fe2 # 0.28.0
+        with:
+          scan-type: "fs"
+          format: "github"
+          output: "dependency-results.sbom.json"
+          image-ref: "."
+          github-pat: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          TRIVY_DB_REPOSITORY: ghcr.io/aquasecurity/trivy-db,public.ecr.aws/aquasecurity/trivy-db
+          TRIVY_USERNAME: ${{ github.actor }}
+          TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Run Trivy vulnerability scanner with rootfs command
         uses: aquasecurity/trivy-action@915b19bbe73b92a6cf82a1bc12b087c9a19a5fe2 # 0.28.0
         with:
+          skip-setup-trivy: true
           scan-type: "rootfs"
-          scanners: vuln,secret
-          ignore-unfixed: true
+          scanners: vuln,secret,misconfig,license
+          skip-files: cloud-tool/security-group.tf # See #577
           format: "sarif"
           output: "trivy-results.sarif"
+        env:
+          TRIVY_DB_REPOSITORY: ghcr.io/aquasecurity/trivy-db,public.ecr.aws/aquasecurity/trivy-db
+          TRIVY_USERNAME: ${{ github.actor }}
+          TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@ea9e4e37992a54ee68a9622e985e60c8e8f12d9f # v3.27.4
