style(trivy.yml): rename the job (#645)
Adjustments to job names to make them easier to find in the history.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -32,7 +32,7 @@ permissions:
 jobs:
   trivy-code-security-scan:
     runs-on: ubuntu-latest
-    name: scan-sbom
+    name: scan
 
     permissions:
       contents: write
