ci: enable AES-NI using yasm (#657)
The fix for the gcc detection/yasm installation has not yet been
merged upstream.

Also, still waiting improvements from openwall/john#4314.

See: #634.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/snap/snapcraft.yaml
+++ b/deploy/snap/snapcraft.yaml
@@ -118,6 +118,7 @@ parts:
       - wget
       - curl
       - patch
+      - yasm
       # OpenCL stuff is available only in X86 architecture
       - on amd64:
           - libpocl-dev
