ci: fail if formatting is recommended (#660)
Ask Linter to reformat the source code and fail if Linter suggests
changes. This means that the code should have been formatted differently
for the PR.

Something like this has already happened to me: the Linter failed
because of a single/double quotation mark when a double/single was
expected, then, I didn't receive any information and I didn't find
out what happened.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -62,6 +62,18 @@ jobs:
           ENABLE_COMMITLINT_STRICT_MODE: true
           ENFORCE_COMMITLINT_CONFIGURATION_CHECK: true
           FILTER_REGEX_EXCLUDE: "^/github/workspace/snapcraft.yaml$" # Workaround for Prettier itself
+          FIX_JAVASCRIPT_PRETTIER: true
+          FIX_JSON_PRETTIER: true
+          FIX_MARKDOWN_PRETTIER: true
+          FIX_YAML_PRETTIER: true
           VALIDATE_GIT_MERGE_CONFLICT_MARKERS: false # See https://github.com/super-linter/super-linter/pull/6374
           DEFAULT_BRANCH: "main"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Check
+        run: |
+          echo "You should format source code properly!"
+          echo "**********************************************************************"
+          git diff
+          echo "**********************************************************************"
+          git diff --quiet
