--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -24,7 +24,9 @@
 name: Trivy
 
 "on":
-  push:
+  pull_request_target:
+    types:
+      - closed
 
 permissions:
   contents: read
@@ -70,7 +72,7 @@ jobs:
         uses: aquasecurity/trivy-action@18f2510ee396bbf400402947b394f2dd8c87dbb0 # 0.29.0
         if:
           github.repository == 'openwall/john-packages' && github.ref == 'refs/heads/main' &&
-          (github.event_name == 'push' || github.event_name == 'schedule')
+          (github.event.pull_request.merged == true)
         with:
           scan-type: "fs"
           format: "github"
@@ -86,7 +88,7 @@ jobs:
         uses: aquasecurity/trivy-action@18f2510ee396bbf400402947b394f2dd8c87dbb0 # 0.29.0
         if:
           github.repository == 'openwall/john-packages' && github.ref == 'refs/heads/main' &&
-          (github.event_name == 'push' || github.event_name == 'schedule')
+          (github.event.pull_request.merged == true)
         with:
           skip-setup-trivy: true
           scan-type: "rootfs"
@@ -103,6 +105,6 @@ jobs:
         uses: github/codeql-action/upload-sarif@f09c1c0a94de965c15400f5634aa42fac8fb8f88 # v3.27.5
         if:
           github.repository == 'openwall/john-packages' && github.ref == 'refs/heads/main' &&
-          (github.event_name == 'push' || github.event_name == 'schedule')
+          (github.event.pull_request.merged == true)
         with:
           sarif_file: "trivy-results.sarif"
