--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -24,9 +24,7 @@
 name: Trivy
 
 "on":
-  pull_request_target:
-    types:
-      - closed
+  push:
 
 permissions:
   contents: read
@@ -40,6 +38,9 @@ jobs:
       contents: write
       security-events: write
 
+    if:
+      github.repository == 'openwall/john-packages' && github.ref == 'refs/heads/main' &&
+      (github.event_name == 'push' || github.event_name == 'schedule')
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
@@ -70,9 +71,6 @@ jobs:
 
       - name: Run Trivy in GitHub SBOM mode and submit results to Dependency Graph
         uses: aquasecurity/trivy-action@18f2510ee396bbf400402947b394f2dd8c87dbb0 # 0.29.0
-        if:
-          github.repository == 'openwall/john-packages' && github.ref == 'refs/heads/main' &&
-          (github.event.pull_request.merged == true)
         with:
           scan-type: "fs"
           format: "github"
@@ -86,9 +84,6 @@ jobs:
 
       - name: Run Trivy vulnerability scanner with rootfs command
         uses: aquasecurity/trivy-action@18f2510ee396bbf400402947b394f2dd8c87dbb0 # 0.29.0
-        if:
-          github.repository == 'openwall/john-packages' && github.ref == 'refs/heads/main' &&
-          (github.event.pull_request.merged == true)
         with:
           skip-setup-trivy: true
           scan-type: "rootfs"
@@ -103,8 +98,5 @@ jobs:
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@f09c1c0a94de965c15400f5634aa42fac8fb8f88 # v3.27.5
-        if:
-          github.repository == 'openwall/john-packages' && github.ref == 'refs/heads/main' &&
-          (github.event.pull_request.merged == true)
         with:
           sarif_file: "trivy-results.sarif"
