--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -80,6 +80,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Branch updated
         run: |
@@ -108,7 +109,7 @@ jobs:
       - name: If '(#999)' matches PR number
         run: |
           PR_NUMBER="${{ github.event.pull_request.number }}"
-          COMMITS="$(git log --oneline origin/main.."${{ github.event.pull_request.head.sha }}" --)"
+          COMMITS="$(git log --oneline origin/main..)"
           echo "HEAD: ${{ github.event.pull_request.head.sha }}"
           echo "$COMMITS" | while read -r COMMIT ; do
               MESSAGE_PR_NUMBER=$(echo "$COMMIT" | grep -oE "\(#[0-9]{3,4}\)$" | cut -d'#' -f 2 | cut -d')' -f 1)
