ci(validate.yml): skip security bot's PRs (#668)
Do not validate PRs originating from Step Security as they will also
fail validation.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -37,7 +37,7 @@ jobs:
     outputs:
       commit: ${{ steps.context.outputs.commit }}
 
-    if: github.actor != 'dependabot[bot]'
+    if: github.actor != 'dependabot[bot]' && github.actor != 'step-security-bot'
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
