ci(validate.yml): check checksum of files (#674)
Ensure that once important files are changed, their checksum is also
updated.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -131,3 +131,13 @@ jobs:
               exit 1
             fi
           done
+
+      - name: Check checksums
+        run: |
+          cd scripts && sha256sum ./*.sh > ../requirements.hash  && cd -
+          cd patches && sha256sum ./* >> ../requirements.hash && cd -
+          echo "You should keep checksums updated!"
+          echo "**********************************************************************"
+          git diff
+          echo "**********************************************************************"
+          git diff --quiet
