--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -36,6 +36,9 @@ jobs:
     runs-on: ubuntu-latest
     name: linter
 
+    permissions:
+      statuses: write
+
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
