build: update the name of a package (#724)
Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/snap/snapcraft.yaml
+++ b/deploy/snap/snapcraft.yaml
@@ -138,7 +138,7 @@ parts:
 
     stage-packages:
       - libgomp1
-      - libpcap0.8
+      - libpcap0.8t64
       - on amd64:
           - ocl-icd-libopencl1
       - on arm64:
