--- a/deploy/Mac_ARM-Delivery.yml
+++ b/deploy/Mac_ARM-Delivery.yml
@@ -8,7 +8,7 @@
 #                                                       | |   | |
 #                                                       |_|   |_|
 #
-# Copyright (c) 2023-2024 Claudio André <dev at claudioandre.slmail.me>
+# Copyright (c) 2023-2025 Claudio André <dev at claudioandre.slmail.me>
 #
 # This program comes with ABSOLUTELY NO WARRANTY; express or implied.
 #
@@ -58,6 +58,15 @@ macOS_task:
     .ci/ci_controller.sh "$TARGET_ARCH" TEST
 
   package_script: |
+    otool -L run/john
+    if false; then
+      # Add the necessary Homebrew libraries to the final package
+      cp "/opt/homebrew/opt/libomp/lib/libomp.dylib"          run/
+      cp "/opt/homebrew/opt/openssl@3/lib/libssl.3.dylib"     run/
+      cp "/opt/homebrew/opt/openssl@3/lib/libcrypto.3.dylib"  run/
+      cp "/opt/homebrew/opt/gmp/lib/libgmp.10.dylib"          run/
+    fi
+
     wget https://raw.githubusercontent.com/openwall/john-packages/main/scripts/clean_package.sh \
       -O .ci/clean_package.sh
     source .ci/clean_package.sh
