--- a/deploy/Mac_ARM-Delivery.yml
+++ b/deploy/Mac_ARM-Delivery.yml
@@ -72,7 +72,7 @@ macOS_task:
     source .ci/clean_package.sh
 
     7z a -t7z -m0=lzma -mx=9 -mfb=64 -md=128m -ms=on JtR-macArm.7z ./
-    7z a -tzip -mx=9 JtR-macArm.zip ./
+    7z a -tzip -mx=9 JtR-macArm.zip ./ -x\!*.7z
     sha256sum -- JtR-macArm.*
 
   always:
