ci(trivy): update egress policy (#773)
Update the network policy in trivy.yml and trivy-scanfs.yml as
recommended by the audit log. Using the recommended policy.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/trivy-scanfs.yml
+++ b/.github/workflows/trivy-scanfs.yml
@@ -46,6 +46,7 @@ jobs:
             d2glxqk2uabbnd.cloudfront.net:443
             ghcr.io:443
             github.com:443
+            mirror.gcr.io:443
             objects.githubusercontent.com:443
             pkg-containers.githubusercontent.com:443
             public.ecr.aws:443
